# donlang

./: '  .gitignore  CMakeLists.txt  Makefile  fizzbuzz.don  main.don  main.ll  main.piss  run_main_don.sh
.cache/clangd/index/: JIT.cpp.5F8C8283E9A47FAB.idx  JIT.h.36DF750B9B000E1F.idx  Trees.cpp.4F0BE52E56994022.idx  Trees.h.A5AEFCCF550B1AF9.idx  ast.cpp.90DA9C1C940C68EE.idx  ast.h.A60D2F2158F79D86.idx  lexer.cpp.395F19264198BC78.idx  lexer.cpp.79E97D196C8D2EAB.idx  lexer.cpp.D1209716E6E03E8A.idx  lexer.cpp.DAD1F9ACE5C62197.idx  lexer.h.1EB5972970A040F4.idx  lexer.h.2C8CF80CD295934F.idx  lexer.h.9369B4AF6F4CE1CF.idx  lexer.h.F80B2E87598BE9CF.idx  main.cpp.037220789A4CCFCA.idx  main.cpp.2BAA99C43F6B1CCD.idx  main.cpp.7BE7BF58986B9F5E.idx  main.cpp.7DBBEE2D84E8F933.idx  parser.cpp.4C97C30E61766503.idx  parser.h.6F60C5FA9189C061.idx  stringutils.cpp.4D8F0ABE05F5706E.idx  stringutils.cpp.D18ECBB23625466A.idx  stringutils.cpp.EB88D5DDC5425063.idx  stringutils.h.2A00B234119CF172.idx  stringutils.h.BE851345A9DCA845.idx  token.cpp.16BE9FD02DBF0C0D.idx  token.cpp.34E28433958E7AE5.idx  token.cpp.EDC33C16091ED482.idx  token.h.2EA597ACC3747722.idx  token.h.3E802AA3C340CF01.idx  token.h.46D7406FEB903F88.idx
ast/: CMakeLists.txt  ast.cpp  ast.h  casting.cpp  classes.cpp  literals.cpp  types.cpp  types.h
core/: CMakeLists.txt  main.cpp
jit/: CMakeLists.txt  JIT.cpp  JIT.h
lexer/: CMakeLists.txt  lexer.cpp  lexer.h  token.cpp  token.h
parser/: CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h  scope.cpp  scope.h
utils/: CMakeLists.txt  stringutils.cpp  stringutils.h
(+17 files in other folders)
